--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visor de Maduración</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Visor Maduración</title>
 </head>
 <body>
-  <noscript>Necesitas habilitar JavaScript para ver esta página.</noscript>
-  <div id="root">Cargando visor...</div>
+  <h1>Cargando visor...</h1>
   <script src="static/js/main.js"></script>
 </body>
 </html>
